--- a/src/app/components/edit/edit.component.html
+++ b/src/app/components/edit/edit.component.html
@@ -13,9 +13,6 @@
     </div>
 
 
-
-
-
     <div nz-row class="h50">
       <div nz-col nzSpan="4" class="ta">
         <label for="type">类型:</label>
@@ -27,7 +24,7 @@
 
           <option *ngFor="let item of typelist" [value]='item.id'>{{item.type}}</option>
         </select>
-        <select  *ngIf="type==3" id="industry" name="industry" [(ngModel)]="industry" >
+        <select *ngIf="type==3" id="industry" name="industry" [(ngModel)]="industry">
           <option value="">请选择</option>
 
           <option *ngFor="let item of industrylist" [value]='item.id'>{{item.industry}}</option>
@@ -38,18 +35,24 @@
 
 
 
-    <div nz-row class="h50">
+    <div nz-row class="h180">
       <div nz-col nzSpan="4" class="ta">
         <label>说明:</label>
       </div>
       <div nz-col nzSpan="16">
-        <input nz-input [(ngModel)]="content" name="content">
+        <div class="wang_editor">
+            <div id="div1" class="toolbar"></div>
+            <div style="padding: 5px 0; color: #ccc"></div>
+            <div id="div2" class="text"  >
+              <!--可使用 min-height 实现编辑区域自动增加高度-->
+             
+            </div>
+
+        </div>
+        
       </div>
       <div nz-col nzSpan="4"></div>
     </div>
-
-
-
 
     <div nz-row class="h50">
       <div nz-col nzSpan="4" class="ta">
@@ -82,7 +85,7 @@
 
       </div>
       <div nz-col nzSpan="16" id="picture">
-        <img src="{{src}}" alt="image"  id="preview">
+        <img src="{{src}}" alt="image" id="preview">
       </div>
       <div nz-col nzSpan="4"></div>
     </div>
@@ -104,21 +107,12 @@
               </tr>
             </thead>
             <tbody>
-              <tr >
+              <tr>
                 <td>{{fileToUpload.name}}</td>
-
-                <!-- <ng-template #other_content>
-                  <td></td>
-                </ng-template>  -->
 
                 <td>
                   {{(fileToUpload.size/1024/1024).toFixed(3)+'MB'}}
                 </td>
-
-                <!--   <ng-template #other_content2>
-                  <td></td>
-                </ng-template>-->
-
                 <td class="progress-td">
                   <div class="progree-outside">
                     <div class="progress-item"></div>
@@ -161,7 +155,7 @@
           <button nz-button nzType="primary" (click)="status2()" class="green-button">
             存为草稿
           </button>
-          <button nz-button nzType="primary" class="cancel" class="white-button r">
+          <button nz-button nzType="primary" class="cancel" class="white-button r" (click)="return()">
             取消
           </button>
 
