--- a/src/app/components/edit/edit.component.less
+++ b/src/app/components/edit/edit.component.less
@@ -1,3 +1,26 @@
+/* -----start  富文本编辑器 */
+
+@import "~wangeditor/release/wangEditor.min.css";
+
+.wang_editor {
+  .toolbar {
+    border: 1px solid #ccc;
+  }
+
+  .text {
+    border: 1px solid #ccc;
+    height: 100px;
+  }
+
+
+
+}
+
+
+
+
+
+
 .edit {
   border: 1px solid #ddd;
   border-radius: 4px;
@@ -16,27 +39,28 @@
 
   }
 
-  #fileinfo{
+  #fileinfo {
     .h50 {
-      height:50px ;
+      height: 50px;
 
     }
 
-    .type select{
+    .type select {
       border-radius: 4px;
-      border:1px solid #d9d9d9;
+      border: 1px solid #d9d9d9;
       height: 32px;
-      
+
     }
 
-    #industry,#type{
-      width:220px;
-      height:32px;
-      border-color:#ddd;
-      border-radius:2px;
+    #industry,
+    #type {
+      width: 220px;
+      height: 32px;
+      border-color: #ddd;
+      border-radius: 2px;
     }
 
-    #industry{
+    #industry {
       margin-left: 60px;
     }
   }
@@ -51,7 +75,7 @@
 
 
 
- 
+
 
   #picture {
     position: relative;
@@ -67,15 +91,15 @@
 
   }
 
-  #preview{
-    
-    height:100px;
-    width:auto;
-    max-width:300px;
+  #preview {
+
+    height: 100px;
+    width: auto;
+    max-width: 300px;
   }
 
 
-  
+
 
 
 
@@ -85,8 +109,12 @@
 
   }
 
-  .h150{
+  .h150 {
     height: 150px;
+  }
+
+  .h180{
+    height:180px;
   }
 
   .progress {
@@ -100,9 +128,10 @@
       width: 100%;
       margin-top: 20px;
     }
-    td .small{
+
+    td .small {
       font-size: 10px;
-      height:18px;
+      height: 18px;
     }
 
   }
@@ -165,7 +194,7 @@
 
   .progress-item {
     background: #4cae4c;
-    width:0;
+    width: 0;
     height: 12px;
     border-radius: 2px;
 
